1.模拟依赖注入 2.模拟初始化